# jaraco.packaging

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_cheese.py
docs/: conf.py  index.rst
jaraco.packaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jaraco/packaging/: cheese.py  depends.py  info.py  make-tree.py  metadata.py  pmxbot.py  print-metadata.py  release.py  sphinx.py
newsfragments/: +.feature.rst  +06ba5ff5.bugfix.rst  +4755e7c5.feature.rst  +517b55af.feature.rst  +568f526b.bugfix.rst  +7ac316d9.bugfix.rst  +fd8933f2.removal.rst  +fe605448.bugfix.rst  11.feature.rst  16.feature.rst  17.feature.rst  20.feature.1.rst  22.bugfix.rst  23.feature.rst  25.bugfix.rst  556.feature.rst
tests/: test_cheese.py
