[build-system]
requires = [
	"setuptools>=77",
	"setuptools_scm[toml]>=3.4.1",
	# jaraco/skeleton#174
	"coherent.licensed",
]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.packaging"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "tools to supplement packaging Python releases"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Framework :: Sphinx :: Extension",
]
requires-python = ">=3.9"
license = "MIT"
dependencies = [
	# virtualenv extra due to pypa/build#266
	"build[virtualenv]",
	"jaraco.context",
	"sphinx",
	"domdf-python-tools",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/jaraco.packaging"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"types-docutils",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 3.4",
]

type = [
	# upstream
	"pytest-mypy >= 1.0.1",

	## workaround for python/mypy#20454
	"mypy < 1.19; python_implementation == 'PyPy'",

	# local
	# PackageMetadata Protocol doesn't have `get` method until Python 3.12
	# But this is a type-checking only issue.
	"importlib_metadata",
]

[tool.setuptools_scm]
