[metadata]
license_file = LICENSE
name = jaraco.packaging
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = tools to supplement packaging Python releases
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.packaging
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Sphinx :: Extension

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	setuptools
	importlib_metadata; python_version < "3.8"
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black >= 0.3.7; python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; python_implementation != "PyPy"
	# jaraco/skeleton#22
	jaraco.test >= 3.2.0

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	dependency-tree=jaraco.packaging.depends:tree_cmd

distutils.commands =
	dependency_tree=jaraco.packaging.depends:DependencyTree
	show=jaraco.packaging.info:Show
