[metadata]
name = jaraco.packaging
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = tools to supplement packaging Python releases
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.packaging
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Framework :: Sphinx :: Extension

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
	# virtualenv extra due to pypa/build#266
	build[virtualenv]
	jaraco.context
	sphinx
	domdf-python-tools

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	types-docutils

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
